--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "validate-translations": "node scripts/validate-translations.js",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
